About Section Done !

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,9 +14,11 @@
 
 //components
 @import "components/button";
+@import "components/composition";
 
-//layour
+//layout
 @import "layout/header";
+@import "layout/grid";
 
 //code
 
