--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 //components
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box";
 
 //layout
 @import "layout/header";
